Attempt to fix scrollbar issue on PC's

--- a/assets/partials/_main.scss
+++ b/assets/partials/_main.scss
@@ -3,9 +3,11 @@ body {
   font: 100% $font-stack;
   color: $primary-color;
   margin: 0px;
-  width: 100%;
-  max-width: 800px;
+  width: 99%;
+  height: 99%;
   border: 1px solid gray;
+  margin: 0 auto;
+  background-color: transparent;
 
   input[type="text"] {
     border: none;
