--- a/assets/partials/_map.scss
+++ b/assets/partials/_map.scss
@@ -25,7 +25,7 @@
 	sidebar {
 		position: absolute;
 		top:0;
-		right:0px;
+		right: 3px;
 		z-index: 1000;
 		width: 225px !important;
 		height: 100%;
